--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,12 @@ body {
   width: 80%;
   height: 80%
   margin: 0 0 auto;
-    }
 
 
 
+}
+.modalFrame {
+  display: none;
+  width: 100%;
+  height: 100%;
+}
